dataset1235/2025-2/610742602/users/59982477/executions/906907063_359632665.log
== RUN (2025-08-19 21:35:58)
-- CODE: 
x=250/6
print(round,2) (x)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round,2) (x)
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round,2) (x)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:35:32)
-- CODE: 
x=250/6
print(round,2(x))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round,2(x))
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round,2(x))
                ^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round,2(x))
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round,2(x))
                ^^^^
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:37:49)
-- CODE: 
x=250/6
print(round(x,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 2
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 2
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:33:58)
-- CODE: 
x=250/6
print(round,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:37:47)
-- CODE: 
x=250/6
print(round(x,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 2
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 2
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:31:19)
-- CODE: 
var= input
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function input>
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:35:59)
-- CODE: 
x=250/6
print(round,2) (x)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round,2) (x)
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round,2) (x)
TypeError: 'NoneType' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:37:56)
-- CODE: 
x=250/6
print(round(x,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:37:56)
-- CODE: 
x=250/6
print(round(x,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:34:04)
-- CODE: 
x=250/6
print(round,2)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:32:49)
-- CODE: 
x=250/6
print(round,2)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:35:30)
-- CODE: 
x=250/6
print(round,2(x))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round,2(x))
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round,2(x))
                ^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round,2(x))
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round,2(x))
                ^^^^
TypeError: 'int' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:30:33)
-- CODE: 
x=250/6
print(round(x,2)
    )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
